--- a/er/10-recommendations.adoc
+++ b/er/10-recommendations.adoc
@@ -14,12 +14,12 @@ A similar discussion has taken place in sensor-related services. SOS V2.0 specif
 
 A JSON-LD response from these services is not available. While response rewriters (to convert existing encodings to a linked data form) have been tested on top of the SensorThings API (JSON to JSON-LD). It may be useful to include JSON-LD capabilities in the standards themselves.
 
-Apart from the semantic association and serialization of features and observations, assignment of URIs to observational resources remains a system by system and use-case by use-case problem that is not necessarily trivial. Identification of unique observations and maintaining identifiers for them can become very complicated considering that time series subsetting is a complex subject in and of itself. The Research Data Alliance https://rd-alliance.org/group/data-citation-wg/outcomes/data-citation-recommendation.html['Data Citation WG Recommendations'] might help guide the community to a useful solution on this front.
+Apart from the semantic association and serialization of features and observations, assignment of URIs to observational resources remains a system by system and use-case by use-case problem that is not necessarily trivial. Identification of unique observations and maintaining identifiers for them can become very complicated considering that time series subsetting is a complex subject in and of itself. The Research Data Alliance https://rd-alliance.org/group/data-citation-wg/outcomes/data-citation-recommendation.html['Data Citation WG Recommendations'] cite:[https://doi.org/10.15497/rda00016] might help guide the community to a useful solution on this front.
 
 === Domain Feature Models
-Domain feature models, such as GWML2 and http://www.opengeospatial.org/projects/initiatives/soildataie[SoilIEML], are defined for encoding and exchange of representations of environmental features. Other models, like HY_Features, are only available in conceptual (UML) form. For use in linked data, best practices and publication workflows for domain feature models as linked data ontologies need to be established. As described in <<hyf_ontology>> and <<ontology_from_uml>> this work has begun and needs to be brought to conclusion for use across the community.
+Domain feature models, such as GWML2 and http://www.opengeospatial.org/projects/initiatives/soildataie[SoilIEML] cite:[MedyckyjScott], are defined for encoding and exchange of representations of environmental features. Other models, like HY_Features, are only available in conceptual (UML) form. For use in linked data, best practices and publication workflows for domain feature models as linked data ontologies need to be established. As described in <<hyf_ontology>> and <<ontology_from_uml>> this work has begun and needs to be brought to conclusion for use across the community.
 
-W3C and OGC work on Observations and Measurements and Sensor Ontologies (See https://www.w3.org/TR/vocab-ssn/[https://www.w3.org/TR/vocab-ssn/]) is among the most advanced with regard to support for linked data approaches as pursued by ELFIE. While attempting to use the Semantic Sensor Network ontology, the concept of a monitoring network was found to be missing or not handled directly. Ad-hoc collections of monitoring features are a common need. Either as a collection that is meant to characterize a specific regional environmental feature, such as a watershed, or as a collection of monitoring features with common ownership, data offerings, or quality. In any case, further analysis of the nature of collections of monitoring features for use within and among environmental monitoring domains is warranted.
+W3C and OGC work on Observations and Measurements and Sensor Ontologies (See https://www.w3.org/TR/vocab-ssn/[https://www.w3.org/TR/vocab-ssn/] cite:[Haller:17:SSN]) is among the most advanced with regard to support for linked data approaches as pursued by ELFIE. While attempting to use the Semantic Sensor Network ontology, the concept of a monitoring network was found to be missing or not handled directly. Ad-hoc collections of monitoring features are a common need. Either as a collection that is meant to characterize a specific regional environmental feature, such as a watershed, or as a collection of monitoring features with common ownership, data offerings, or quality. In any case, further analysis of the nature of collections of monitoring features for use within and among environmental monitoring domains is warranted.
 
 === Publication of URIs, Content, Types, and Associations
 
@@ -36,7 +36,7 @@ Further experimental work is required to identify the range of different represe
 
 === Default Response When a URI has Multiple Representations
 
-Non information resource identifiers, URIs that are an identifier for a thing that may or may not have information representations, are useful to provide persistent and reusable identifiers for entities such as real-world features. These non information resource identifiers provide a means for global identification across a distributed system such that multiple members of the system can contain information about and/or in reference to shared entities. There is a basic conundrum with non information resource identifiers in that there can only be one default response (for a given encoding) when dereferencing a URI and only one member of a distributed system can be the source of that default response. Further, in order to achieve linked system interoperability, dereferencing behavior of non information resource URIs needs to be in accord with the expectations of a member node of a system. The https://www.w3.org/2001/tag/group/track/issues/14[httpRange-14] and the https://www.w3.org/TR/cooluris/[Cool URIs Technical Report] provide a significant basis for solving this conundrum and W3C working groups continue to focus on it, but many details remain to be agreed upon for use cases such as are being pursued by the ELFIE.
+Non information resource identifiers, URIs that are an identifier for a thing that may or may not have information representations, are useful to provide persistent and reusable identifiers for entities such as real-world features. These non information resource identifiers provide a means for global identification across a distributed system such that multiple members of the system can contain information about and/or in reference to shared entities. There is a basic conundrum with non information resource identifiers in that there can only be one default response (for a given encoding) when dereferencing a URI and only one member of a distributed system can be the source of that default response. Further, in order to achieve linked system interoperability, dereferencing behavior of non information resource URIs needs to be in accord with the expectations of a member node of a system. The https://www.w3.org/2001/tag/group/track/issues/14[httpRange-14] cite:[issue142002] and the https://www.w3.org/TR/cooluris/[Cool URIs Technical Report] cite:[Sauermann:08:CUS] provide a significant basis for solving this conundrum and W3C working groups continue to focus on it, but many details remain to be agreed upon for use cases such as are being pursued by the ELFIE.
 
 While details of the default dereferencing behavior of non information resource identifiers and subsequent redirects to information resources was discussed in the ELFIE, the IE has attempted to focus on encoding of linked data information resources rather than the network behavior for discovery and retrieval of non-information resources. Future work and best practice development will be needed to address these issues:
 
