--- a/er/8-contexts.adoc
+++ b/er/8-contexts.adoc
@@ -5,20 +5,20 @@
 
 An important goal of the ELFIE was "adoptability" by web developers and compatibility with technologies that are ubiquitous on the internet. Given these goals, the IE team started to think in terms of _"views"_ (concept introduced in <<view_box>>) of the linked data graph describing a given environmental feature or observation. Two conceptual _views_, "preview" and "network", were the primary focus of the ELFIE. "Preview" is meant to be a very simple summary of a feature including type, name, and geometry. "Network" is meant to be a summary of relevant first-neighbor features in a topological network. These two form the core interoperable set of ELFIE _views_ but lack domain specific relations such as observational relations and hydrologic topology.
 
-Initial ELFIE discussions of the graph view concept used the https://www.w3.org/TR/shacl/[Shapes Constraint Language SHACL] technology as the logical implementation. Further evaluation and consideration of the ELFIE goals regarding adoptability and ubiquity, the https://www.w3.org/TR/json-ld/#the-context[JSON-LD context] was chosen as the most appropriate technical solution to express the graph _views_. The ELFIE contexts are meant to be precise descriptions of what the IE found to be the most appropriate linked data properties (attributes and relations) and types. They are not intended to be used as a schema to specify or validate the contents of a given document. However, they could provide a useful set of aliases for the subset of types and properties that could be expected to be parsed and interpreted by the client.
+Initial ELFIE discussions of the graph view concept used the https://www.w3.org/TR/shacl/[Shapes Constraint Language SHACL] cite:[Kontokostas:17:SCL] technology as the logical implementation. Further evaluation and consideration of the ELFIE goals regarding adoptability and ubiquity, the https://www.w3.org/TR/json-ld/#the-context[JSON-LD context] was chosen as the most appropriate technical solution to express the graph _views_. The ELFIE contexts are meant to be precise descriptions of what the IE found to be the most appropriate linked data properties (attributes and relations) and types. They are not intended to be used as a schema to specify or validate the contents of a given document. However, they could provide a useful set of aliases for the subset of types and properties that could be expected to be parsed and interpreted by the client.
 
-From a practical perspective, the contexts provide clear guidelines for what properties and types to use while not being overly prescriptive, limiting, or difficult to use in a typical web development workflow. Unlike schemas, such contexts support the “Open World Assumption” where missing elements simply indicate that this information is not currently available to the data provider, without the burden (and potential for misuse) of stating a placeholder value. Furthermore, to simplify the use of the contexts and reduce possible errors while parsing the _views_, https://w3c.github.io/json-ld-syntax/#type-coercion[Type Coercion] was not used while aliasing properties in the contexts files. 
+From a practical perspective, the contexts provide clear guidelines for what properties and types to use while not being overly prescriptive, limiting, or difficult to use in a typical web development workflow. Unlike schemas, such contexts support the “Open World Assumption” where missing elements simply indicate that this information is not currently available to the data provider, without the burden (and potential for misuse) of stating a placeholder value. Furthermore, to simplify the use of the contexts and reduce possible errors while parsing the _views_, https://www.w3.org/TR/json-ld11/#type-coercion[Type Coercion] cite:[Kellogg:18:J] was not used while aliasing properties in the contexts files. 
 
 More information about the design and engineering of ELFIE contexts can be found on the https://opengeospatial.github.io/ELFIE/json-ld/[ELFIE JOSN-LD web page].
 
 === General ELFIE Contexts
 The ELFIE "preview" graph _view_, is described by the
 https://opengeospatial.github.io/ELFIE/json-ld/elf.jsonld[elf.jsonld] context.
-It uses http://schema.org/[schema.org], https://www.w3.org/TR/skos-reference/[skos],
+It uses https://schema.org/[schema.org] cite:[schemaorg], https://www.w3.org/TR/skos-reference/[skos] cite:[Miles:09:SSK],
 and http://www.opengeospatial.org/standards/geosparql[geosparql] properties and types.
 Schema.org is used whenever possible to maintain compatibility with search engines, uses SKOS for a lose "related" relationship, and GeoSPARQL for precise specification of a geometric preview. The geometric preview of a feature was an area of contention for the IE.
 
-http://geojson.org/geojson-ld/[GeoJSON-LD] was seen as a logical solution, but as described in the outstanding issues for GeoJSON-LD, nested GeoJSON coordinate arrays are not supported by JSON-LD parsers. Additionally, the schema.org geometry schema was seen as under specified in that among other reasons, it does not provide a default coordinate reference system or a mechanism to declare one. For this reason, the GeoSPARQL well known text format was included providing a precise and JSON-LD compatible geometry format. However, provided the technical limitations listed <<preview-geometry,below>>, if some logical assumptions are made for the use of schema.org geometry (https://schema.org/GeoShape[schema:GeoShape]), it can be used to satisfy the basic geometry preview use case with significantly lower technical overhead than support for the full well known text standard. Further work should look more closely at this issue in an attempt to reconcile and provide guidance.
+http://geojson.org/geojson-ld/[GeoJSON-LD] cite:[gillies2017] was seen as a logical solution, but as described in the outstanding issues for GeoJSON-LD, nested GeoJSON coordinate arrays are not supported by JSON-LD parsers. Additionally, the schema.org geometry schema was seen as under specified in that among other reasons, it does not provide a default coordinate reference system or a mechanism to declare one. For this reason, the GeoSPARQL well known text format was included providing a precise and JSON-LD compatible geometry format. However, provided the technical limitations listed <<preview-geometry,below>>, if some logical assumptions are made for the use of schema.org geometry (https://schema.org/GeoShape[schema:GeoShape]), it can be used to satisfy the basic geometry preview use case with significantly lower technical overhead than support for the full well known text standard. Further work should look more closely at this issue in an attempt to reconcile and provide guidance.
 
 The ELFIE "network" _view_, is described by the
 https://opengeospatial.github.io/ELFIE/json-ld/elf-network.jsonld[elf-network.jsonld]
