bib cleanup and final asciidoc before pending

--- a/er/8-contexts.adoc
+++ b/er/8-contexts.adoc
@@ -14,11 +14,11 @@ More information about the design and engineering of ELFIE contexts can be found
 === General ELFIE Contexts
 The ELFIE "preview" graph _view_, is described by the
 https://opengeospatial.github.io/ELFIE/json-ld/elf.jsonld[elf.jsonld] context.
-It uses https://schema.org/[schema.org] cite:[schemaorg], https://www.w3.org/TR/skos-reference/[skos] cite:[Miles:09:SSK],
+It uses https://schema.org/[schema.org], https://www.w3.org/TR/skos-reference/[skos] cite:[Miles:09:SSK],
 and http://www.opengeospatial.org/standards/geosparql[geosparql] properties and types.
 Schema.org is used whenever possible to maintain compatibility with search engines, uses SKOS for a lose "related" relationship, and GeoSPARQL for precise specification of a geometric preview. The geometric preview of a feature was an area of contention for the IE.
 
-http://geojson.org/geojson-ld/[GeoJSON-LD] cite:[gillies2017] was seen as a logical solution, but as described in the outstanding issues for GeoJSON-LD, nested GeoJSON coordinate arrays are not supported by JSON-LD parsers. Additionally, the schema.org geometry schema was seen as under specified in that among other reasons, it does not provide a default coordinate reference system or a mechanism to declare one. For this reason, the GeoSPARQL well known text format was included providing a precise and JSON-LD compatible geometry format. However, provided the technical limitations listed <<preview-geometry,below>>, if some logical assumptions are made for the use of schema.org geometry (https://schema.org/GeoShape[schema:GeoShape]), it can be used to satisfy the basic geometry preview use case with significantly lower technical overhead than support for the full well known text standard. Further work should look more closely at this issue in an attempt to reconcile and provide guidance.
+http://geojson.org/geojson-ld/[GeoJSON-LD] was seen as a logical solution, but as described in the outstanding issues for GeoJSON-LD, nested GeoJSON coordinate arrays are not supported by JSON-LD parsers. Additionally, the schema.org geometry schema was seen as under specified in that among other reasons, it does not provide a default coordinate reference system or a mechanism to declare one. For this reason, the GeoSPARQL well known text format was included providing a precise and JSON-LD compatible geometry format. However, provided the technical limitations listed <<preview-geometry,below>>, if some logical assumptions are made for the use of schema.org geometry (https://schema.org/GeoShape[schema:GeoShape]), it can be used to satisfy the basic geometry preview use case with significantly lower technical overhead than support for the full well known text standard. Further work should look more closely at this issue in an attempt to reconcile and provide guidance.
 
 The ELFIE "network" _view_, is described by the
 https://opengeospatial.github.io/ELFIE/json-ld/elf-network.jsonld[elf-network.jsonld]
