--- a/er/annex-a.adoc
+++ b/er/annex-a.adoc
@@ -140,25 +140,25 @@ _Note:_
 * The rules of ISO 19150-2 restrict the resulting ontologies to the way UML metamodel works . Respecting all of the 19150-2 means we don’t take into account the open world assumption when working with ontologies (missing a piece of information doesn’t mean that piece of information is false). For instance, placeholder properties or classes in UML are transformed to OWL properties and classes where there is no need for them.
 * The transformation rules are consistent but limits the resulting ontologies to the UML paradigm. Some additional work may be done on the resulting ontologies to add semantics between classes (disjunctions, subsumption, equivalence, etc) and within or between properties (functional properties, transitive properties, symmetric properties, inverse of, etc).
 * No specific indications about association classes are mentioned in the norm. It is obvious that an association class is translated as an OWL class. No rule for linking this class to the related class(es) appear.
-* Union: 19150-2 recommends to use owl:UnionOf, the implementation in ShapeChange seems rather to stick to 19118 approach (disjoint union) but does it in a very complex way. Instead, owl:disjointUnionOf shall be used. This should generate a ChangeRequest to 19150-2
+* Union: 19150-2 recommends to use owl:UnionOf, the implementation in ShapeChange seems rather to stick to 19118 approach (disjoint union) but does it in a very complex way, as explained in the http://docs.opengeospatial.org/per/16-020.html#clause_solutions_rdf_unions[OGC Testbed-12]. Instead, we belive that this solution can be simplified using the OWL2 property owl:disjointUnionOf. This should generate a ChangeRequest to 19150-2. 
 
 ==== Property names and definitions
 * Properties naming when translating attributes: dots in properties identifiers could be interpreted somehow that they are still scoped to classes, while in ontologies, properties are scoped to a namespace instead. Properties are independent entities that may or may not have a specific class as a domain. This is one major structural difference between UML and OWL.
 ** Use general (non-scoped to class) property names when the name of the attribute or association is unique. Thus, leave the domain of the properties open (or typed as owl:Thing). The restrictions on the properties values in the class definition can be used for this purpose.
 ** When there is an ambiguïty, allow scoped names for properties (class.Property) then verify whether
 *** automatically created properties can be merged into one (eg. GeologicFeature.purpose and EarthMaterial.purpose).
-*** or if automatically created properties can be subProperty of a higher one.
+*** or if automatically created properties can be subPropertyof a higher one. It was brought to our attention after the ad'hoc meeting that the https://portal.opengeospatial.org/files/?artifact_id=81893&version=1[Application Schema-based Ontology Development Engineering Report (OGC Testbed-14)] provides in its chapter 7 an analysis for “OWL Property Generalization” that should be implemented in ShapeChange 2.7.0.
 * Domains and ranges of properties
 ** Domains and ranges properties should not be defined in the reference ontology to favour reuse. They could be specified it in application ontologies that reuse the properties (if needed). Instead, restriction on the values of the properties should be defined for every class.
 
 ==== Alignment documents (UML -> OWL)
-* are place to put subProperty relationships (roleA and roleB are flavours of role ) - also equivalences across application schema
+* are place to put subPropertyof relationships (roleA and roleB are flavours of role ) - also equivalences across application schema  
 * Skos:notation (datatype to be determined) to preserve original property name token - for display and reference to xpath elements
 * Both are not automatised yet in ShapeChange SWE related issues There is no direct SWE ontology but several concepts from SWE can be found elsewhere
 * Reference to basic SWE types must be modified if needed by specialized Classes from other ontologies or by defining new ones.
 * Use GSML_QuantityRange instead of swe:QuantityRange as recommended in GeoSciML definition.
 * Rename swe:Category to skos:Concept or mdl:Lineage (depending on the case) and swe:Quantity to the relevant class in the context (ts:TimePosition, mdq:PositionalAccuracy, etc.). Preparing for application ontologies
-* To enable GeoSciML Basic and Borehole properties to be reused in application ontologies like GeoSciML Lite, we activate the ShapeChange rule "rule-owl-prop-globalScopeByUniquePropertyName" that scopes unique name property to global use, and thus not specify the domain of these properties. The scoping of the properties to their classes in Basic and Borehole is done using restrictions on the values that these properties can take for their corresponding classes. This can be done thanks to the ShapeChange rule "rule-owl-prop-range-local-withUniversalQuantification". UML constraints In the considered standards, constraints are expressed in non-canonical forms in the UML classes definitions or in OCL.
+* To enable GeoSciML Basic and Borehole properties to be reused in application ontologies like GeoSciML Lite, we activate the ShapeChange rule "rule-owl-prop-globalScopeByUniquePropertyName" that scopes unique name property to global use, and thus not specify the domain of these properties. The scoping of the properties to their classes in Basic and Borehole is done using restrictions on the values that these properties can take for their corresponding classes. This can be done thanks to the ShapeChange rule "rule-owl-prop-range-local-withUniversalQuantification". In the considered standards as in many OGC domain models, UML constraints are expressed in non-canonical forms in the UML classes definitions or in OCL. Nevertheless, it was brought to our attention after the ad'hoc meeting  that the https://portal.opengeospatial.org/files/?artifact_id=81893&version=1[Application Schema-based Ontology Development Engineering Report (OGC Testbed-14)] provides in its chapter 5 an analysis for “Conversion of OCL Constraints” that could be useful for future implementations.
 * The requirements of the model cannot be all respected in the ontology representation (eg. "QuantityRange properties that must report a single value SHALL assign both lower and upper value as equal to that single value."). This should be checked and translated manually as restrictions (owl:Restriction, other classes axioms, properties relations, …) when possible afterwards. Implementation choices for specific communities
 * ShapeChange "Map entries" provide a flexible way to choose recommended names for properties and classes. This would enable one to reuse existing specialized classes and properties from external ontologies.
 * GeologicUnitView contains mixed information from both GeologicUnit and MappedFeature. A decision must be made to which entity the view must be associated (using the same URI as the GeologicUnit or MappedFeature )
@@ -168,12 +168,12 @@ _Note:_
 Choice made to replace the "character string" data properties by object properties from GeoSciML Basic, borehole and other ontologies when possible (using the XPath mapping detailed in GeoSciML specification).
 * «typ» and «FeatureType» serialise to owl:Class - we need to have further annotation or axiomitisation (e.g. «datatype»)
 * Abstract class : According to ISO 19150-2, abstract classes in UML are transformed to annotated owl class. But in GSMLsome abstract classes were created to provide an extension point for GSML extension (ex: FoliationAbstractDescription); they provided a bag to list properties. Some might then be revisited/deleted (the only reason to keep them would be for schema mapping purposes but we considered it a low priority use case compared to LinkedOpenData, Websem reasoning)
-* The expressiveness of ontology languages should be used to enrich the reasoning: axioms on classes (equivalence, disjointness), and properties relations (inverse, equivalence) and characteristics (transitivity, symmetry, functionality and inverse functionality ).
+* The expressiveness of ontology languages should be used to enrich the reasoning: axioms on classes (equivalence, disjointness), and properties relations (inverse, equivalence) and characteristics (transitivity, symmetry, functionality and inverse functionality ). In this scope, ShapeChange provides for example a https://shapechange.net/targets/ontology/uml-rdfowl-based-isois-19150-2/#rule-owl-cls-disjoint-classes[general rule] for defining disjointness of the direct subClasses of a Class. In addition, it was brought to our attention after the ad'hoc meeting that the https://portal.opengeospatial.org/files/?artifact_id=81893&version=1[Application Schema-based Ontology Development Engineering Report (OGC Testbed-14)] provides in its chapter 6 an analysis for “OWL Property Enrichment” that should be implemented in ShapeChange 2.7.0.
 * UML class union should be transformed using owl:disjointUnionOf
 * Rob : The key meta-model issue I see here is the use of a character string (UML option) to hold an IRI in a particular implementation profile - and the trickiness of modelling this as an objectProperty or not. Option could be to model it as an rdfs:Property, and allow implementation profiles to constrain it to an owl:ObjectProperty.
 
 ==== Bugs and limitations in software (or things too hard to configure)
-* Association classes must be handled differently: ShapeChange transforms an association class into separate class and properties. Thus, no link is created between the association class and the classes that are initially related by it in the UML. No rule is found in ShapeChange to handle that.
+* Association classes must be handled differently: ShapeChange transforms an association class into separate class and properties. Thus, no link is created between the association class and the classes that are initially related by it in the UML. No direct rule is found in ShapeChange to handle that. As it was brought to our attention after the ad'hoc meeting, a workaround solution is to use https://shapechange.net/transformations/association-class-mapper/[ShapeChange Transformer] in order to transform association classes into a semantically equivalent structure as explained in the http://docs.opengeospatial.org/per/16-020.html#rdf_cr_associationclass[OGC Testbed-12 Engineering Report]. This solution wasn't tested during the expermient. 
 
 This must be defined afterwards with two properties: associationSource and associationTarget (exactly as in passing from conceptual model to a logical schema). As a solution, this could be locally defined as [association name]+"Source" and [association name]+"Target". These two properties must have the right domain and range. The direct property between the source and the target automatically created by Shapechange must be deleted.
 
@@ -185,7 +185,7 @@ This must be defined afterwards with two properties: associationSource and assoc
 When a UML class from another schema is referenced (Observation class for example ), it should be replaced by the specialized classes from the ontology of that schema (could be automated in ShapeChange). If such ontology isn’t defined (SWE types for example) use (equivalent) classes from other ontologies or define new ones.
 
 ==== Standing issues
-* Usage of skos VS dedicated classes when transforming «codeList» from the UML: The pattern proposed by ISO-19150-2 is to create a class for each property designed to hold a "term".  This class shall be a subtype of skos::Concept according to the spec. This is seen as a problem for some as SKOS is not the only possible way to encode vocabularies, as some might prefer to encode vocabularies as formal ontologies.
+* Usage of skos VS dedicated classes when transforming «codeList» from the UML: The pattern proposed by ISO-19150-2 is to create a class for each property designed to hold a "term".  This class shall be a subtype of skos:Concept according to the spec. This is seen as a problem for some as SKOS is not the only possible way to encode vocabularies, as some might prefer to encode vocabularies as formal ontologies. Both solutions for implementing codeList (as skos:Concepts or as a dedicated class) can be done using ShapeChange as explained in http://docs.opengeospatial.org/per/16-020.html#_code_lists[Testbed-12 (ShapeChange Engineering Report)]. However, encoding vocabularies as formal ontologies (ex. owl:Class hierarchy) requires a different tool or must be handled manually.  
 * Version URI: Do we need to specify where version numbers go in the URI schemes discussed above ?
 
 === Support material
